# rkit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cursor_code_review_for_rust_principles.md  install.fish  install.sh
.github/workflows/: publish.yml
benches/: ls_benchmark.rs
etc/: default_config_linux.yaml  default_config_windows.yaml
rkit/: Cargo.toml
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: clone.rs  ls.rs  mod.rs  rls.rs  rview.rs  view.rs
