[package]
name = "rkit"
version = "0.1.12"
edition = "2021"
description = "Rust CLI Toolkit for Git Repo Management"
authors = ["Justin Thomas <admin@imthor.in>"]
license = "MIT"
repository = "https://github.com/imthor/rkit"
readme = "README.md"
keywords = ["git", "cli", "repository", "management"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata]
default_config_linux = "etc/default_config_linux.yaml"
default_config_windows = "etc/default_config_windows.yaml"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
dirs = "5"
ignore = "0.4"
url = "2"
thiserror = "1"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "ls_benchmark"
harness = false

[lib]
name = "rkit"
path = "src/lib.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
